# foxess-ha

./: .ruff.toml  CHANGELOG.md  hacs.json  pyproject.toml  renovate.json
.github/workflows/: codeql.yml  validate.yml
custom_components/foxess/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py  strings.json
scripts/: check.sh
