[project]
name = "foxess-ha"
version = "1.1.0"
description = "Home Assistant FoxESS Cloud integration (fork with solar-only + config flow)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["custom_components/foxess/manifest.json:version"]
build_command = "pip install uv && uv lock"
commit_message = "chore(release): {version}"
tag_format = "v{version}"

[tool.semantic_release.commit_parser_options]
patch_tags = ["fix", "perf"]
other_allowed_tags = ["build", "chore", "ci", "docs", "style", "refactor", "test"]

[tool.semantic_release.branches.master]
match = "master"
prerelease = false

[tool.semantic_release.changelog]
mode = "init"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.remote]
type = "github"
token = { env = "GITHUB_TOKEN" }

[dependency-groups]
dev = [
    "ruff>=0.9",
]
